--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,6 @@
 /* universal selector */
 *{
-    color: red;
+    /* color: red; */
 }
 
 /* tag or element selector */
@@ -25,4 +25,53 @@ a[title="google"]{
     letter-spacing: 10px;
     word-spacing: 20px;
     line-height: 40px;
+}
+
+/* Descendant selector */
+div p {
+    background-color: yellow;
+}
+
+/* Child Selector */
+div>p {
+    color: black;
+}
+
+span>p {
+    color: green;
+}
+
+/* Hover Selector */
+h1 a:hover {
+    color: white;
+    font-size: 50px;
+    background-color: red;
+}
+
+h1:hover {
+    color: red;
+}
+
+h2 a:link {
+    color: green;
+}
+
+h2 a:hover {
+    color: greenyellow;
+}
+
+h2 a:visited {
+    color: brown;
+}
+
+h2 a:active {
+    color: yellow;
+}
+
+/* target */
+:target {
+    color: red;
+    border: 10px dotted black;
+    line-height: 30px;
+    letter-spacing: 20px;
 }
