--- a/CSS/style.css
+++ b/CSS/style.css
@@ -28,9 +28,9 @@ a[title="google"]{
 }
 
 /* Descendant selector */
-div p {
+/* div p {
     background-color: yellow;
-}
+} */
 
 /* Child Selector */
 div>p {
@@ -74,4 +74,56 @@ h2 a:active {
     border: 10px dotted black;
     line-height: 30px;
     letter-spacing: 20px;
+}
+
+/* layout */
+.inline{
+    border: 2px solid rebeccapurple;
+    display: inline-block;
+    width: 400px;
+}
+
+.block{
+    border: 2px solid green;
+    width: 400px;
+    display: inline-block;
+}
+
+/* Float */
+.fload_right img{
+    width: 40%;
+    float: right;
+    text-align: justify;
+}
+
+.clear{
+    clear: both;
+}
+
+.float_left img{
+    width: 40%;
+    float: left;
+    text-align: justify;
+}
+
+/* grid */
+.gridone div,.gridtwo div,.gridthree div{
+    padding: 20px;
+    color: white;
+    text-align: center;
+}
+
+.gridone , .gridtwo, .gridthree{
+    display: grid;
+    grid-template-columns: auto auto auto;
+}
+
+.gridtwo{
+    grid-column-gap: 40px;
+}
+
+.gridthree{
+    grid-row-gap: 40px;
+    /* grid-gap: 40px; */
+    grid-column-gap: 70px;
 }
