font, position, project

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -107,13 +107,13 @@ h2 a:active {
 }
 
 /* grid */
-.gridone div,.gridtwo div,.gridthree div{
+.gridone div,.gridtwo div,.gridthree div, .gridfour div, .gridfive div{
     padding: 20px;
-    color: white;
+    color: white; 
     text-align: center;
 }
 
-.gridone , .gridtwo, .gridthree{
+.gridone , .gridtwo, .gridthree, .gridfour, .gridfive{
     display: grid;
     grid-template-columns: auto auto auto;
 }
@@ -126,4 +126,68 @@ h2 a:active {
     grid-row-gap: 40px;
     /* grid-gap: 40px; */
     grid-column-gap: 70px;
+}
+
+.columnadd{
+    grid-column-start: 1;
+    grid-column-end: 3;
+}
+
+.rowadd{
+    grid-row-start: 1;
+    grid-row-end: 4;
+}
+
+/* Position */
+.parent_absolute{
+    width: 1100px;
+    height: 500px;
+    border: 2px solid red;
+    position: relative;
+}
+
+.absolute{
+    width: 400px;
+    height: 200px;
+    border: 2px solid green;
+    position: absolute;
+    top: 18px;
+    left: 158px;
+}
+
+.parent_relative{
+    width: 1100px;
+    height: 500px;
+    border: 2px solid yellow;
+}
+
+.relative {
+    width: 400px;
+    height: 200px;
+    border: 2px solid brown;
+    position: relative;
+    top: 18px;
+    left: 150;
+}
+
+.fixed{
+    position: fixed;
+    top: 50px;
+    right: 100px;
+}
+
+.online{
+    font-family: "Playwrite FR Moderne", cursive;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+}
+
+@font-face {
+    font-family: "playwrite";
+    src: url(Playwrite_FR_Moderne/static/PlaywriteFRModerne-ExtraLight.ttf);
+}
+
+.offline{
+    font-family: "playwrite";
 }
