--- a/CSS/Perfume_Project/CSS/style.css
+++ b/CSS/Perfume_Project/CSS/style.css
@@ -41,9 +41,6 @@
 .cart{
     margin-right: 0px;
 }
-/* .nav{
-    background-color: rgb(8, 137, 189);
-} */
 /* End Nav */
 
 /* Start Bunner */
@@ -63,7 +60,7 @@
 }
 @font-face {
     font-family: "Dancing_Script";
-    src: url(/Perfume_Project/font/static/DancingScript-Medium.ttf);
+    src: url(../font/static/DancingScript-Bold.ttf);
 } 
 .bunner{
     margin-bottom: 50px;
@@ -109,21 +106,48 @@
 }
 .detail_btn{
     border: solid 1px black;
+    border-radius: 5px;
     background-color: skyblue;
     color: black;
     text-decoration: none;
     padding: 5px 2px 5px 2px ;
     margin: 20px 50px 50px 0px;
-    display: inline-block;
+    display: inline;
     float: right;
 }
 .detail_btn:hover{
     background-color: yellow;
 }
-.detail{
-    margin-bottom: 80px;
-}
 /* End Top 10 Lists */
+
+/* Start Icon Line */
+.icon_line{
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-column-gap: 20px;
+    margin-top: 100px;
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-bottom: 60px;
+}
+.order_icon{
+    border: 1px solid gray;
+    border-radius: 5px;
+}
+.icon{
+    display: inline-block;
+    float: left;
+    margin: 10px;
+}
+.order_icon p{
+    display: inline-block;
+    margin: 10px;
+}
+.order_title{
+    display: block;
+    font-weight: bold;
+}
+/* End Icon Line */
 
 /* Start Season */
 .types_perfume{
@@ -165,6 +189,7 @@
 .summer_explore{
     display: inline-block;
     border: solid 1px black;
+    border-radius: 5px;
     background-color: skyblue;
     color: black;
     text-decoration: none;
@@ -208,6 +233,7 @@
 .rainy_explore{
     display: inline-block;
     border: solid 1px black;
+    border-radius: 5px;
     background-color: skyblue;
     color: black;
     text-decoration: none;
@@ -224,6 +250,7 @@
     display: inline-block;
     border: solid 1px black;
     background-color: skyblue;
+    border-radius: 5px;
     color: black;
     text-decoration: none;
     padding: 5px 2px 5px 2px ;
@@ -245,3 +272,54 @@
     margin-left: 150px;
 }
 /* End Winter Collection */
+
+/* start footer */
+.footer_group{
+    background-color: black;
+}
+.footer{
+    margin-top: 50px;
+    padding: 40px 0px;
+    color: white;
+    display: grid;
+    grid-template-columns: 600px 150px 150px auto;
+}
+.footer_about{
+    margin-left: 100px;
+}
+.footer_about ul{
+    width: 80%;
+}
+.footer_divided{
+    width: 100px;
+    border: 2px solid red);
+    margin-left: 0px;
+    margin-bottom: 10px;
+}
+.footer_nav{
+    display: block;
+    color: white;
+    text-decoration: none;
+    margin-top: 20px;
+}
+.footer_adress p{
+    margin-top: 20px;
+}
+.footer_icon{
+    margin-right: 20px;
+    color: white;
+}
+.the_end{
+    color: white;
+    text-align: center;
+    margin-top: 30px;
+}
+.divided{
+    color: gray;
+}
+.footer_social{
+    text-align: center;
+    margin-bottom: 30px;
+}
+/* End Footer */
+
