--- a/CSS/Perfume_Project/CSS/product.css
+++ b/CSS/Perfume_Project/CSS/product.css
@@ -41,7 +41,47 @@
 .cart{
     margin-right: 0px;
 }
+.nav{
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
+}
 /* End Nav */
+
+/* About */
+/* Start About Bunner */
+.about_bunner_img{
+    width: 100%;
+    position: relative;
+    opacity: 0.9;
+}
+.about_help_text{
+    position: absolute;
+    top: 400px;
+    right: 450px;
+    color: whitesmoke;
+    text-align: center;
+}
+.about_help_title{
+    font-size: 40px;
+    padding: 20px 0px 20px 0px;
+}
+.help_email{
+    border: 1px solid whitesmoke;
+    background-color: whitesmoke;
+    color: black;
+    padding: 10px 20px 10px 20px;
+    margin-right: 7px;
+    margin-left: 7px;
+    text-decoration: none;
+}
+.about_help_icon a:hover{
+    color: whitesmoke;
+    background: none;
+    transition-duration: 0.5s;
+}
+.about_help_icon{
+    margin-top: 15px;
+}
+/* End About Bunner */
 
 /* Start Bunner */
 .bunner_img{
@@ -53,17 +93,22 @@
     top: 300px;
     right: 50px;
 }
-.bunner_heading{
-    font-size: 60px;
-    font-family: "Dancing_Script";
-    padding-bottom: 20px;
-}
-@font-face {
-    font-family: "Dancing_Script";
-    src: url(../font/static/DancingScript-Bold.ttf);
-} 
 .bunner{
     margin-bottom: 50px;
+}
+.product_mainimg{
+    width: 100%;
+    position: relative;
+}
+.product_title{
+    position: absolute;
+    top: 300px;
+    right: 520px;
+    text-align: center;
+}
+.product_heading{
+    font-size: 60px;
+    padding-bottom: 20px;
 }
 /* End Bunner */
 
@@ -83,20 +128,226 @@
 }
 .top_10_items{
     display: grid;
-    grid-template-columns: auto auto auto auto auto auto;
-    grid-column-gap: 10px;
-    grid-row-gap: 30px;
-    margin: 0px 50px 0px 50px;
+    grid-template-columns:auto auto auto auto auto auto;
+    grid-column-gap: 5px;
+    grid-row-gap: 50px;
+    margin: 0px 30px 0px 30px;
+}
+.top_10_img{
+    position: relative;
 }
 .icon_heart{
-    float: left;
+    position: absolute;
+    top: 1%;
+    right: 5%;
 }
-.icon_cart{
-    float: right;
+.order_btn{
+    border: 1px solid black;
+    border-radius: 5px;
+    background-color: black;
+    padding: 10px 60px 10px 60px;
+    position: absolute;
+    bottom: 1%;
+    opacity: 0;
 }
-.top_10_text span{
-    margin-left: 40px;
+.order_btn a{
+    text-decoration: none;
+    font-weight: bold;
+    color: white;
 }
-.price{
-    margin-top: 20px;
+.top_10_img:hover .order_btn{
+    opacity: 0.5;
+}
+.order_btn:hover{
+    background-color: rgb(97, 97, 97);
+}
+.fa-heart{
+    color: black;
+}
+.item_head{
+    margin-bottom: 3px;
+}
+.brand_name{
+    color: gray;
+    margin-bottom: 3px;
+}
+.brand_rate{
+    color: gray;
+    margin-bottom: 5px;
+}
+.item_price{
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+/* End Top 10 List */
+
+/* Start Quick Icon */
+.quick_icon{
+    color: black;
+    background-color: skyblue;
+    border: 1px solid black;
+    padding: 5px 10px 5px 10px;
+    margin-right: 10px;
+}
+.quick_icon_line{
+    margin-top: 30px;
+    margin-left: 45%;
+}
+/* End Quick Icon */
+
+/* Start Icon Line */
+.support{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-column-gap: 30px;
+    margin-top: 30px;
+    padding: 30px 100px 30px 100px;
+    margin-bottom: 30px;
+    text-align: center;
+    background-color: skyblue;
+}
+.support_title{
+    margin-bottom: 5px;
+    margin-top: 5px;
+}
+/* End Icon Line */
+
+.top_10_img{
+    margin-right: 15px;
+}
+
+/* start footer */
+.footer_group{
+    background-color: black;
+    margin-top: 30px;
+}
+.footer{
+    color: white;
+    display: grid;
+    grid-template-columns: 500px 300px 300px;
+    padding: 30px 50px 30px 50px;
+    margin: 0px 100px 0px 100px;
+}
+.footer_about ul{
+    width: 80%;
+}
+.footer_headline{
+    width: 100px;
+    border: 2px solid skyblue;
+    margin-left: 0px;
+    margin-bottom: 10px;
+}
+.footer_nav{
+    display: block;
+    color: white;
+    text-decoration: none;
+    margin-top: 5px;
+}
+.footer_social{
+    margin-top: 10px;
+}
+.quick_head{
+    color: white;
+}
+.help_head{
+    color: white;
+    margin-top: 10px;
+}
+.quick_line{
+    width: 100px;
+    border: 2px solid skyblue;
+    margin-left: 0px;
+    margin-bottom: 10px;
+}
+.footer_adress{
+    width: 80%;
+}
+.footer_adress p{
+    margin-top: 10px;
+}
+.footer_icon{
+    margin-right: 20px;
+    color: white;
+}
+.the_end{
+    color: white;
+    text-align: center;
+    margin-top: 10px;
+    padding-bottom: 10px;
+}
+.divided{
+    color: gray;
+}
+/* End Footer */
+
+/* Our Story Tab */
+/* Start Story */
+.story_div{
+    text-align: center;
+}
+.story_title{
+    font-size: 30px;
+    padding: 20px 0px 20px 0px;
+}
+.story{
+    display: grid;
+    grid-template-columns: auto auto;
+}
+.story_1_title{
+    font-size: 30px;
+}
+.story_1_para{
+    padding: 150px 150px 95px 100px;
+
+}
+.story_1{
+    width: 100%;
+    padding-top: 30px;
+}
+.story_text{
+    padding: 20px 0px 20px 0px;
+}
+.story_2_para{
+    padding: 130px 150px 80px 100px;
+}
+.story_2{
+    width: 100%;
+}
+.story_3_para{
+    padding: 100px 150px 80px 100px;
+}
+.story_3{
+    width: 100%;
+}
+/* End Story */
+
+/* Start Icon Line */
+.support{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-column-gap: 30px;
+    margin-top: 30px;
+    padding: 30px 100px 30px 100px;
+    margin-bottom: 30px;
+    text-align: center;
+    background-color: skyblue;
+}
+.support_title{
+    margin-bottom: 5px;
+    margin-top: 5px;
+}
+/* End Icon Line */
+
+/* start nightout collection */
+.nightout_img{
+    width: 207px;
+    height: 240px;
+}
+/* End night collection */
+
+/* Start Contact Us */
+.contact_us{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    text-align: center;
 }
