--- a/CSS/Perfume_Project/CSS/style.css
+++ b/CSS/Perfume_Project/CSS/style.css
@@ -50,18 +50,15 @@
 }
 .bunner_text{
     position: absolute;
-    top: 300px;
-    right: 50px;
+    top: 250px;
+    right: 100px;
+    width: 40%;
+    text-align: center;
 }
 .bunner_heading{
     font-size: 60px;
-    font-family: "Dancing_Script";
     padding-bottom: 20px;
 }
-@font-face {
-    font-family: "Dancing_Script";
-    src: url(../font/static/DancingScript-Bold.ttf);
-} 
 .bunner{
     margin-bottom: 50px;
 }
@@ -111,9 +108,12 @@
     color: black;
     text-decoration: none;
     padding: 5px 2px 5px 2px ;
-    margin: 20px 50px 50px 0px;
+    margin: 20px 50px 0px 0px;
     display: inline;
     float: right;
+}
+.clear{
+    clear: both;
 }
 .detail_btn:hover{
     background-color: yellow;
@@ -121,31 +121,19 @@
 /* End Top 10 Lists */
 
 /* Start Icon Line */
-.icon_line{
+.support{
     display: grid;
-    grid-template-columns: auto auto auto auto;
-    grid-column-gap: 20px;
-    margin-top: 100px;
-    margin-left: 50px;
-    margin-right: 50px;
-    margin-bottom: 60px;
+    grid-template-columns: auto auto auto;
+    grid-column-gap: 30px;
+    margin-top: 30px;
+    padding: 30px 100px 30px 100px;
+    margin-bottom: 30px;
+    text-align: center;
+    background-color: skyblue;
 }
-.order_icon{
-    border: 1px solid gray;
-    border-radius: 5px;
-}
-.icon{
-    display: inline-block;
-    float: left;
-    margin: 10px;
-}
-.order_icon p{
-    display: inline-block;
-    margin: 10px;
-}
-.order_title{
-    display: block;
-    font-weight: bold;
+.support_title{
+    margin-bottom: 5px;
+    margin-top: 5px;
 }
 /* End Icon Line */
 
@@ -184,7 +172,6 @@
 .summer{
     padding-bottom: 30px;
     padding-top: 30px;
-    background-color: whitesmoke;
 }
 .summer_explore{
     display: inline-block;
@@ -224,7 +211,8 @@
 }
 .rainy{
     padding-top: 30px;
-    background-color: white;
+    background-color: whitesmoke;
+    padding-bottom: 60PX;
 }
 .rainy_paragraph{
     display: inline-block;
@@ -262,7 +250,6 @@
 .winter{
     padding-top: 30px;
     padding-bottom: 80px;
-    background-color: whitesmoke;
 }
 .winter_img{
     width: 500px;
@@ -273,26 +260,31 @@
 }
 /* End Winter Collection */
 
+/* Start Nightout Collection */
+.nightout{
+    padding-top: 30px;
+    background-color: whitesmoke;
+    padding-bottom: 115px;
+}
+
 /* start footer */
 .footer_group{
     background-color: black;
 }
 .footer{
     margin-top: 50px;
-    padding: 40px 0px;
     color: white;
     display: grid;
-    grid-template-columns: 600px 150px 150px auto;
-}
-.footer_about{
-    margin-left: 100px;
+    grid-template-columns: 500px 300px 300px;
+    padding: 30px 50px 30px 50px;
+    margin: 0px 100px 0px 100px;
 }
 .footer_about ul{
     width: 80%;
 }
-.footer_divided{
+.footer_headline{
     width: 100px;
-    border: 2px solid red);
+    border: 2px solid skyblue;
     margin-left: 0px;
     margin-bottom: 10px;
 }
@@ -300,10 +292,29 @@
     display: block;
     color: white;
     text-decoration: none;
-    margin-top: 20px;
+    margin-top: 5px;
+}
+.footer_social{
+    margin-top: 10px;
+}
+.quick_head{
+    color: white;
+}
+.help_head{
+    color: white;
+    margin-top: 10px;
+}
+.quick_line{
+    width: 100px;
+    border: 2px solid skyblue;
+    margin-left: 0px;
+    margin-bottom: 10px;
+}
+.footer_adress{
+    width: 80%;
 }
 .footer_adress p{
-    margin-top: 20px;
+    margin-top: 10px;
 }
 .footer_icon{
     margin-right: 20px;
@@ -312,14 +323,11 @@
 .the_end{
     color: white;
     text-align: center;
-    margin-top: 30px;
+    margin-top: 10px;
+    padding-bottom: 10px;
 }
 .divided{
     color: gray;
-}
-.footer_social{
-    text-align: center;
-    margin-bottom: 30px;
 }
 /* End Footer */
 
