--- a/BootStrap/Top A One/css/style.css
+++ b/BootStrap/Top A One/css/style.css
@@ -53,10 +53,168 @@
     border-radius: 50%;
     color: white;
 }
+.carousel_btn{
+    border: 1px solid;
+    border-radius: 5px;
+    color: white;
+    background-color: rgb(47, 5, 87);
+}
 
 /* teaching method */
 .border_start{
     border-left: 5px solid rgb(47, 5, 87);
+}
+.tm_head{
+    font-size: 45px;
+    color: rgb(47, 5, 87);
+}
+.tm_title{
+    font-size: 20px;
+}
+.tm_hr{
+    border-top: 1px dotted rgb(73, 72, 72);
+}
+.fs_phone{
+    font-size: 20px;
+}
+.tm_box{
+    width: 100px;
+}
+
+/* course */
+.course_box{
+    width: 150px;
+}
+.course_img_hover:hover{
+    transform: scale(1.1);
+    transition-duration: 0.7s;
+}
+.course_img_hidden{
+    overflow: hidden;
+}
+
+/* Comming Soon */
+.comming_card{
+    margin-bottom: 37px;
+}
+
+/* about us */
+
+
+/* review */
+.slick-slide img {
+    width: 100%;
+}
+
+.slick-slider
+{
+    position: relative;
+    display: block;
+    box-sizing: border-box;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+            user-select: none;
+    -webkit-touch-callout: none;
+    -khtml-user-select: none;
+    -ms-touch-action: pan-y;
+        touch-action: pan-y;
+    -webkit-tap-highlight-color: transparent;
+}
+
+.slick-list
+{
+    position: relative;
+    display: block;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+}
+.slick-list:focus
+{
+    outline: none;
+}
+.slick-list.dragging
+{
+    cursor: pointer;
+    cursor: hand;
+}
+
+.slick-slider .slick-track,
+.slick-slider .slick-list
+{
+    -webkit-transform: translate3d(0, 0, 0);
+       -moz-transform: translate3d(0, 0, 0);
+        -ms-transform: translate3d(0, 0, 0);
+         -o-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+}
+
+.slick-track
+{
+    position: relative;
+    top: 0;
+    left: 0;
+    display: block;
+}
+.slick-track:before,
+.slick-track:after
+{
+    display: table;
+    content: '';
+}
+.slick-track:after
+{
+    clear: both;
+}
+.slick-loading .slick-track
+{
+    visibility: hidden;
+}
+
+.slick-slide
+{
+    display: none;
+    float: left;
+    height: 100%;
+    min-height: 1px;
+}
+[dir='rtl'] .slick-slide
+{
+    float: right;
+}
+.slick-slide img
+{
+    display: block;
+}
+.slick-slide.slick-loading img
+{
+    display: none;
+}
+.slick-slide.dragging img
+{
+    pointer-events: none;
+}
+.slick-initialized .slick-slide
+{
+    display: block;
+}
+.slick-loading .slick-slide
+{
+    visibility: hidden;
+}
+.slick-vertical .slick-slide
+{
+    display: block;
+    height: auto;
+    border: 1px solid transparent;
+}
+.slick-arrow.slick-hidden {
+    display: none;
+}
+
+.footer_logo{
+    width: 35%;
 }
 
   /* footer */
