--- a/BootStrap/Top_A_One/css/style.css
+++ b/BootStrap/Top_A_One/css/style.css
@@ -35,7 +35,7 @@
 /* carousel */
 .main{
     position: relative;
-    background: url(../images/bunner_3.jpg);
+    background: url(../images/carousel.1.png);
     min-height: 100vh;
     background-size: cover;
     background-position: right;
